# fbhookfork

./: .gitignore  .project  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dodola/tracehooker/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/linker/: CMakeLists.txt  abort_with_reason.c  bionic_linker.h  elfSharedLibData.cpp  elfSharedLibData.h  elf_pltrel_parser.h  hooks.cpp  hooks.h  link.cpp  linker.cpp  locks.h  sharedlibs.cpp  sharedlibs.h  sig_safe_write.c  sigmux.c  trampoline.cpp  trampoline.h  trampoline_arm.c
app/src/main/cpp/xhook/: CMakeLists.txt
app/src/main/java/com/dodola/tracehooker/: Atrace.java  MainActivity.java  MyApplication.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dodola/tracehooker/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
plthook/: .project  build.gradle
plthook/src/androidTest/java/com/dodola/fb/plthook/: ExampleInstrumentedTest.java
plthook/src/main/: AndroidManifest.xml
plthook/src/main/cpp/: Atrace.cpp  Atrace.h  CMakeLists.txt  hooks.cpp  jni.cpp
plthook/src/main/cpp/cjni/: log.h  verify.h
plthook/src/main/cpp/fb/: ThreadLocal.h
plthook/src/main/cpp/linker/: elfSharedLibData.cpp  fblink.cpp  log_assert.h
plthook/src/main/cpp/linker/test/data/: target.c
plthook/src/main/java/com/facebook/profilo/provider/atrace/: Atrace.java
plthook/src/test/java/com/dodola/fb/plthook/: ExampleUnitTest.java
